<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_login_container"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/shape_container_dialog"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="visible"
    tools:context=".OnTrackMainActivity">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/circularImageView"
        android:layout_width="@dimen/size_img_perfil"
        android:layout_height="@dimen/size_img_perfil"
        android:src="@drawable/img_perfil"
        app:civ_border="true"
        android:layout_gravity="center_horizontal"
        app:civ_border_color="@color/colorAccent"
        app:civ_border_width="@dimen/border_img_perfil"
        app:civ_shadow="true"
        app:civ_shadow_color="@color/colorAccent"
        app:civ_shadow_radius="5" />
    <!--<ImageView
        android:id="@+id/img_conf_usuario"
        android:layout_width="@dimen/size_img_perfil"
        android:layout_gravity="center_horizontal"
        android:layout_height="@dimen/size_img_perfil"
        android:background="@drawable/img_perfil"
        android:scaleType="centerCrop"
        android:visibility="visible" />-->
    <TextView
        android:id="@+id/id_txt_correo_acerca_de"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/name_developer"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/id_txt_tel_acerca_de"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/tel_developer"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/tvFechaVersion"
        android:layout_width="match_parent"
        android:textSize="16sp"

        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"

        android:gravity="center_horizontal"
        android:text="@string/bio_developer"
        android:textColor="@android:color/black" />

</LinearLayout>