<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="@dimen/margin_left_nombre_mascota"
    android:orientation="vertical"

    tools:context="com.example.ciglesias_pc.pruebasainet.MainActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/id_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/elevation_appbar"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways"
            app:theme="@style/ThemeOverlay.AppCompat.Light">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/id_registro_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical"
                android:padding="@dimen/padin_linear"
                android:visibility="visible">



                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/id_til_confirm_correo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/id_edt_nombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:hint="@string/hint_nombre"
                            android:inputType="text"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/id_til_correo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/id_edt_correo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_correo"
                            android:inputType="textEmailAddress"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:orientation="horizontal">


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/id_til_pass_registro"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/id_edt_msj"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/hint_mensaje"
                            android:inputType="text"
                            android:singleLine="true" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/id_btn_registrarse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_btn_login"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margint_btn_enviar"
                    android:gravity="center_vertical"
                    android:paddingLeft="@dimen/padin_linear"
                    android:paddingRight="@dimen/padin_linear"
                    android:text="@string/str_btn_enviar"
                    android:textColor="@android:color/white" />

            </LinearLayout>

        </ScrollView>


    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>
